add connection string for azure db

--- a/ContosoUniversity/appsettings.json
+++ b/ContosoUniversity/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=tcp:phrixisdb.database.windows.net,1433;Initial Catalog=phrixis;Persist Security Info=False;User ID={your_username};Password={your_password}#!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
